Adding 'ger-BE' too to locale browser map

--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/locale.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/locale.yml
@@ -58,7 +58,7 @@ parameters:
 
     ezpublish.locale.browser_map:
         au: ['eng-AU']
-        be: ['fre-BE', 'dut-BE']
+        be: ['fre-BE', 'dut-BE', 'ger-BE']
         br: ['por-BR']
         ca: ['eng-CA']
         cn: ['chi-CN']
