IBX-1196: Started respecting `SEARCH_ENGINE` env variable in `IbexaTestKernel`

--- a/eZ/Bundle/EzPublishCoreBundle/Tests/Resources/config/ezpublish.yaml
+++ b/eZ/Bundle/EzPublishCoreBundle/Tests/Resources/config/ezpublish.yaml
@@ -1,3 +1,6 @@
+parameters:
+    env(SEARCH_ENGINE): 'legacy'
+
 ezpublish:
     siteaccess:
           default_siteaccess: '__default_site_access__'
@@ -12,5 +15,5 @@ ezpublish:
         default:
             storage: ~
             search:
-                engine: legacy
+                engine: '%env(SEARCH_ENGINE)%'
                 connection: default
