Fixed `IbexaTestKernel` not using custom Postgres Platform class

--- a/eZ/Bundle/EzPublishCoreBundle/Tests/Resources/services/fixture-services.yaml
+++ b/eZ/Bundle/EzPublishCoreBundle/Tests/Resources/services/fixture-services.yaml
@@ -20,3 +20,7 @@ services:
     EzSystems\DoctrineSchema\Database\DbPlatform\SqliteDbPlatform:
         calls:
             - [setEventManager, ['@doctrine.dbal.default_connection.event_manager']]
+
+    EzSystems\DoctrineSchema\Database\DbPlatform\PostgreSqlDbPlatform:
+        calls:
+            - [ setEventManager, [ '@doctrine.dbal.default_connection.event_manager' ] ]
