--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/commands.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/commands.yml
@@ -53,3 +53,9 @@ services:
             $imageGateway: '@ezpublish.fieldType.ezimage.storage_gateway'
         tags:
             - { name: console.command }
+
+    Ibexa\Bundle\Command\SetSystemContentTypeGroupCommand:
+        autowire: true
+        autoconfigure: true
+        tags:
+            - { name: console.command }
