--- a/eZ/Bundle/EzPublishCoreBundle/Tests/Resources/config/framework.yaml
+++ b/eZ/Bundle/EzPublishCoreBundle/Tests/Resources/config/framework.yaml
@@ -9,4 +9,4 @@ framework:
     cache:
         app: cache.adapter.array
     router:
-        resource: '@EzPublishCoreBundle/Tests/Resources/config/routes.yaml'
+        resource: '%ibexa.core.test.resource_dir%/config/routes.yaml'
