--- a/src/bundle/Core/Resources/config/events.yml
+++ b/src/bundle/Core/Resources/config/events.yml
@@ -4,5 +4,4 @@ services:
         autoconfigure: true
         public: false
 
-    Ibexa\Core\Repository\EventSubscriber\:
-        resource: '../../../eZ/Publish/Core/Repository/EventSubscriber/*'
+    Ibexa\Core\Repository\EventSubscriber\DeleteUserSubscriber: ~
