--- a/src/bundle/Core/Resources/config/papi.yml
+++ b/src/bundle/Core/Resources/config/papi.yml
@@ -1,5 +1,5 @@
 parameters:
-    ezpublish.kernel.root_dir: "%kernel.project_dir%/vendor/ezsystems/ezplatform-kernel"
+    ezpublish.kernel.root_dir: "%kernel.project_dir%/vendor/ibexa/core"
 
     # API
     ezplatform.kernel.proxy_cache_dir: '%kernel.cache_dir%/repository/proxy'
