--- a/src/lib/Resources/settings/events.yml
+++ b/src/lib/Resources/settings/events.yml
@@ -4,5 +4,4 @@ services:
         autoconfigure: true
         public: false
 
-    Ibexa\Core\Repository\EventSubscriber\:
-        resource: '../../../../lib/Repository/EventSubscriber/*'
+    Ibexa\Core\Repository\EventSubscriber\DeleteUserSubscriber: ~
