IBX-1308: Moved command class to right place

--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/commands.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/commands.yml
@@ -54,7 +54,7 @@ services:
         tags:
             - { name: console.command }
 
-    Ibexa\Bundle\Command\SetSystemContentTypeGroupCommand:
+    Ibexa\Bundle\Core\Command\SetSystemContentTypeGroupCommand:
         autowire: true
         autoconfigure: true
         tags:
