IBX-1410: Fixed namespace

--- a/eZ/Publish/Core/settings/indexable_fieldtypes.yml
+++ b/eZ/Publish/Core/settings/indexable_fieldtypes.yml
@@ -111,7 +111,7 @@ services:
             - {name: ezplatform.field_type.indexable, alias: ezurl}
 
     ezpublish.fieldType.indexable.ezuser:
-        class: eZ\Publish\Core\FieldType\User\SearchField
+        class: Ibexa\Bundle\Core\FieldType\User\SearchField
         tags:
             - { name: ezplatform.field_type.indexable, alias: ezuser }
 
