--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,7 +3,7 @@ name: CI
 on:
     push:
         branches:
-            - master
+            - main
             - '[0-9]+.[0-9]+'
     pull_request: ~
 
