IBX-1466: Moved parts of EzPlatformCoreBundle to IbexaCoreBundle (#18)
* Moved default Ibexa NFS adapter settings from ezplatform-core

* Moved SessionConfigurationPass from ezplatform-core

* Moved generic & P.sh configuration from EzPlatformCore

--- a/src/bundle/Core/Resources/config/default_settings.yml
+++ b/src/bundle/Core/Resources/config/default_settings.yml
@@ -252,3 +252,10 @@ parameters:
     # Siteaccess aware Entity Manager
     ##
     ibexa.orm.entity_mappings: []
+
+    ibexa.platform.io.nfs.adapter.config:
+        root: './'
+        path: '$var_dir$/$storage_dir$/'
+        writeFlags: ~
+        linkHandling: ~
+        permissions: [ ]
