--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -58,7 +58,7 @@ jobs:
 
     integration-tests-postgres:
         name: PostgreSQL integration tests
-        needs: tests
+        # needs: tests
         services:
             postgres:
                 image: postgres:10
@@ -117,7 +117,7 @@ jobs:
 
     integration-tests-mysql:
         name: MySQL integration tests
-        needs: tests
+        # needs: tests
         services:
             mysql:
                 image: mysql:8.0
