--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -138,9 +138,9 @@ jobs:
         timeout-minutes: 20
 
         strategy:
+            fail-fast: false
             matrix:
                 php:
-                    - '7.3'
                     - '7.4'
                 composer_options: [ "" ]
                 include:
