--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,6 +24,8 @@ jobs:
                 include:
                     -   php: '8.0'
                         composer_options: "--ignore-platform-req php"
+                    -   php: '8.1'
+                        composer_options: "--ignore-platform-req php"
 
         steps:
             - uses: actions/checkout@v2
@@ -88,6 +90,8 @@ jobs:
                 include:
                     -   php: '8.0'
                         composer_options: "--ignore-platform-req php"
+                    -   php: '8.1'
+                        composer_options: "--ignore-platform-req php"
 
         steps:
             -   uses: actions/checkout@v2
@@ -145,6 +149,8 @@ jobs:
                 composer_options: [ "" ]
                 include:
                     -   php: '8.0'
+                        composer_options: "--ignore-platform-req php"
+                    -   php: '8.1'
                         composer_options: "--ignore-platform-req php"
 
         steps:
