--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,7 +17,6 @@ jobs:
             fail-fast: false
             matrix:
                 experimental: [ false ]
-                code_style_check: [ true ]
                 php:
                     - '7.3'
                     - '7.4'
@@ -27,7 +26,7 @@ jobs:
                         composer_options: "--ignore-platform-req php"
                     -   php: '8.1'
                         composer_options: "--ignore-platform-req php"
-                        code_style_check: false
+                        skip_code_style: true
 
         steps:
             - uses: actions/checkout@v2
@@ -52,7 +51,7 @@ jobs:
             #   run: composer run-script phpstan
 
             - name: Run code style check
-              if: matrix.code_style_check
+              if: matrix.skip_code_style != true
               run: composer run-script check-cs -- --format=checkstyle | cs2pr
 
             - name: Run unit test suite
@@ -63,7 +62,7 @@ jobs:
 
     integration-tests-postgres:
         name: PostgreSQL integration tests
-        # needs: tests
+        needs: tests
         services:
             postgres:
                 image: postgres:10
@@ -122,7 +121,7 @@ jobs:
 
     integration-tests-mysql:
         name: MySQL integration tests
-        # needs: tests
+        needs: tests
         services:
             mysql:
                 image: mysql:5.7
