Remove full_dump.php from analysis

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -10,3 +10,4 @@ parameters:
     excludePaths:
         analyse:
             - tests/integration/Core/Repository/var
+            - eZ/Publish/Core/Search/Legacy/Tests/_fixtures/full_dump.php
