IBX-1334: Rebranded ibexa/core to use new namespaces (#32)
For more details see https://issues.ibexa.co/browse/IBX-1334

--- a/tests/bundle/Core/Resources/services/fixture-services.yaml
+++ b/tests/bundle/Core/Resources/services/fixture-services.yaml
@@ -17,10 +17,10 @@ services:
         arguments:
             - '@doctrine.dbal.default_connection'
 
-    EzSystems\DoctrineSchema\Database\DbPlatform\SqliteDbPlatform:
+    Ibexa\DoctrineSchema\Database\DbPlatform\SqliteDbPlatform:
         calls:
             - [setEventManager, ['@doctrine.dbal.default_connection.event_manager']]
 
-    EzSystems\DoctrineSchema\Database\DbPlatform\PostgreSqlDbPlatform:
+    Ibexa\DoctrineSchema\Database\DbPlatform\PostgreSqlDbPlatform:
         calls:
             - [ setEventManager, [ '@doctrine.dbal.default_connection.event_manager' ] ]
