--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         "symfony/expression-language": "^5.3.0",
         "symfony/validator": "^5.3.0",
         "symfony/var-dumper": "^5.3.0",
-        "ezsystems/doctrine-dbal-schema": "^4.0@dev",
+        "ibexa/doctrine-schema": "^4.0@dev",
         "symfony-cmf/routing": "^2.3",
         "guzzlehttp/guzzle": "^6.5",
         "php-http/guzzle6-adapter": "^2.0",
@@ -63,7 +63,7 @@
         "jenner/simple_fork": "^1.2",
         "friends-of-behat/mink-extension": "^2.4",
         "ibexa/ci-scripts": "^0.2@dev",
-        "ezsystems/ezplatform-code-style": "^2.0",
+        "ibexa/code-style": "^1.0",
         "phpunit/phpunit": "^8.2",
         "matthiasnoback/symfony-dependency-injection-test": "^4.1",
         "symfony/phpunit-bridge": "^5.1",
@@ -125,7 +125,7 @@
     },
     "scripts": {
         "check-cs": "@fix-cs --dry-run",
-        "fix-cs": "php-cs-fixer fix -v --show-progress=dots",
+        "fix-cs": "php-cs-fixer fix --config=.php-cs-fixer.php -v --show-progress=dots",
         "unit": "phpunit -c phpunit.xml",
         "integration": [
             "Composer\\Config::disableProcessTimeout",
