--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,6 @@
         "php-http/guzzle6-adapter": "^2.0",
         "nelmio/cors-bundle": "^2.0",
         "pagerfanta/pagerfanta": "^2.1",
-        "ocramius/proxy-manager": "^2.2",
         "doctrine/dbal": "^2.13.0",
         "doctrine/orm": "^2.7",
         "doctrine/doctrine-bundle": "^2.0",
@@ -54,6 +53,7 @@
         "twig/twig": "^3.0",
         "twig/extra-bundle": "^3.0",
         "friendsofsymfony/jsrouting-bundle": "^2.5",
+        "friendsofphp/proxy-manager-lts": "^1.0",
         "psr/event-dispatcher": "^1.0",
         "symfony/templating": "^5.3.0",
         "composer/package-versions-deprecated": "^1.11"
