--- a/composer.json
+++ b/composer.json
@@ -71,6 +71,7 @@
         "phpstan/phpstan": "^1.2"
     },
     "conflict": {
+        "friendsofphp/php-cs-fixer": "3.5.0",
         "symfony/dependency-injection": "5.3.7",
         "symfony/security-core": "5.3.0",
         "doctrine/dbal": "2.7.0",
