[Behat] Divided Query Controller tests into setup and execution

--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/feature_contexts.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/feature_contexts.yml
@@ -16,10 +16,7 @@ services:
         arguments:
             $kernel: '@kernel'
 
-    eZ\Bundle\EzPublishCoreBundle\Features\Context\QueryControllerContext:
-        public: true
-        arguments:
-            $repository: '@ezpublish.api.repository'
+    eZ\Bundle\EzPublishCoreBundle\Features\Context\QueryControllerContext: ~
 
     eZ\Bundle\EzPublishCoreBundle\Features\Context\ContentTypeContext:
         public: true
