--- a/.github/workflows/browser-tests.yaml
+++ b/.github/workflows/browser-tests.yaml
@@ -14,6 +14,7 @@ jobs:
         with:
             project-edition: 'oss'
             project-version: '^3.3.x-dev'
-            test-suite:  '--mode=standard --profile=core --tags=~@broken'
+            test-setup-phase-1: '--mode=standard --profile=core --suite=setup'
+            test-suite: "--mode=standard --profile=core --tags='~@broken&&~@setup'"
         secrets:
             SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
