Added integration test for Criterion, added missing strict types declaration, removed unused docblock

--- a/eZ/Publish/Core/settings/storage_engines/legacy/url_wildcard.yml
+++ b/eZ/Publish/Core/settings/storage_engines/legacy/url_wildcard.yml
@@ -24,4 +24,6 @@ services:
             - "@ezpublish.persistence.legacy.url_wildcard.mapper"
         lazy: true
 
-    Ibexa\Core\Persistence\Legacy\Content\URLWildcard\Query\CriteriaConverter: ~
+    Ibexa\Core\Persistence\Legacy\Content\URLWildcard\Query\CriteriaConverter:
+        arguments:
+            $handlers: !tagged_iterator ibexa.storage.legacy.url_wildcard.criterion.handler
