IBX-360: Added \d+ requirement on contentId parameter for ez_content_download_field_id route (#325)

--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/routing/internal.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/routing/internal.yml
@@ -38,3 +38,6 @@ ez_content_download:
 ez_content_download_field_id:
     path: /content/download/{contentId}/{fieldId}
     defaults: { _controller: ezpublish.controller.content.download_redirection:redirectToContentDownloadAction }
+    requirements:
+        contentId: '\d+'
+        fieldId: '\d+'
