IBX-5663: Added paginated role assignments load method to API
For more details see https://issues.ibexa.co/browse/IBX-5663 and https://github.com/ezsystems/ezplatform-kernel/pull/373

Brief:

Two new methods were added to the `RoleService` in order to improve performance:
- `loadRoleAssignments` - allows setting `$offset` and `$limit` arguments in order to allow pagination.
- `countRoleAssignments` - counting role assignments, usable for the above method.

Key changes:

* Added paginated `loadRoleAssignments` and `countRoleAssignments` methods to Public API

* Changed cache key and tag patterns to follow conventions

* Fixed cache invalidation for `removeRoleAssignment`

* Handled orphaned role assignments when deleting User

* Handled orphaned role assignments when deleting User Group

* Improved RoleService integration tests related to the changes

---------

Co-authored-by: Andrew Longosz <alongosz@users.noreply.github.com>

--- a/eZ/Publish/Core/settings/storage_engines/cache.yml
+++ b/eZ/Publish/Core/settings/storage_engines/cache.yml
@@ -53,6 +53,7 @@ parameters:
         role_assignment_role_list: 'rarl-%s'
         role_with_by_id_suffix: 'r-%s-bi'
         role_assignment_with_by_role_suffix: 'ra-%s-bro'
+        role_assignment_with_by_role_offset_limit_suffix: 'ra-%%s-bro-%%s-%%s'
         role_assignment_with_by_group_inherited_suffix: 'ra-%s-bgi'
         role_assignment_with_by_group_suffix: 'ra-%s-bg'
         section: 'se-%s'
@@ -147,6 +148,7 @@ parameters:
         role_assignment_role_list: 'rarl-%s'
         role_with_by_id_suffix: 'r-%s-bi'
         role_assignment_with_by_role_suffix: 'ra-%s-bro'
+        role_assignment_with_by_role_offset_limit_suffix: 'ra-%%s-bro-%%s-%%s'
         role_assignment_with_by_group_inherited_suffix: 'ra-%s-bgi'
         role_assignment_with_by_group_suffix: 'ra-%s-bg'
         section: 'se-%s'
