IBX-6504: Gracefully handled URL generation in `RoutingExtension`

--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/templating.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/templating.yml
@@ -122,13 +122,10 @@ services:
 
     ezpublish.templating.extension.routing:
         class: eZ\Publish\Core\MVC\Symfony\Templating\Twig\Extension\RoutingExtension
-        arguments:
-            $routeReferenceGenerator: "@ezpublish.route_reference.generator"
-            $urlGenerator: "@router"
-            $contentPreviewHelper: "@ezpublish.content_preview_helper"
-            $locationService: "@ezpublish.api.service.location"
+        arguments: ["@ezpublish.route_reference.generator", "@router"]
         tags:
-            - {name: twig.extension}
+            - { name: twig.extension }
+            - { name: 'monolog.logger', channel: 'ibexa.core' }
 
     eZ\Publish\Core\MVC\Symfony\Templating\Twig\ResourceProvider:
         arguments:
