IBX-6504: Gracefully handled URL generation in `RoutingExtension`
For more details see https://issues.ibexa.co/browse/IBX-6504 and https://github.com/ezsystems/ezplatform-kernel/pull/389.

Key changes:

* Handled a case when a translated URL alias taken from `ez_path` used in a view used for preview is not available yet - an empty string is returned. That occurs for previews of translated content item when an item is not always available.

* Loaded Location in all Languages in preview context.

--- a/eZ/Bundle/EzPublishCoreBundle/Resources/config/services.yml
+++ b/eZ/Bundle/EzPublishCoreBundle/Resources/config/services.yml
@@ -191,7 +191,8 @@ services:
     ezpublish.param_converter.location:
         class: eZ\Bundle\EzPublishCoreBundle\Converter\LocationParamConverter
         arguments:
-            - "@ezpublish.siteaccessaware.service.location"
+            $locationService: '@ezpublish.siteaccessaware.service.location'
+            $contentPreviewHelper: '@ezpublish.content_preview_helper'
         tags:
             - { name: request.param_converter, priority: "%ezpublish.param_converter.location.priority%", converter: ez_location_converter }
 
