IBX-7015: Fixed Content Type cache_keys

--- a/eZ/Publish/Core/settings/storage_engines/cache.yml
+++ b/eZ/Publish/Core/settings/storage_engines/cache.yml
@@ -24,10 +24,11 @@ parameters:
         content_version_list: 'c-%s-vl'
         content_version: 'c-%%s-v-%%s'
         content_type: 'ct-%s'
+        content_type_with_by_remote_suffix: 'ct-%s-br'
+        content_type_with_id_suffix: 'ct-%s-bi'
         content_type_field_map: 'ctfm'
         content_type_group: 'ctg-%s'
         content_type_group_with_id_suffix: 'ctg-%s-bi'
-        content_type_group_with_by_remote_suffix: 'ctg-%s-br'
         content_type_group_list: 'ctgl-%s'
         content_type_list_by_group: 'ctlbg-%s'
         image_variation: 'ig'
@@ -119,10 +120,11 @@ parameters:
         content_version_list: 'c-%s-vl'
         content_version: 'c-%%s-v-%%s'
         content_type: 'ct-%s'
+        content_type_with_by_remote_suffix: 'ct-%s-br'
+        content_type_with_id_suffix: 'ct-%s-bi'
         content_type_field_map: 'ctfm'
         content_type_group: 'ctg-%s'
         content_type_group_with_id_suffix: 'ctg-%s-bi'
-        content_type_group_with_by_remote_suffix: 'ctg-%s-br'
         content_type_group_list: 'ctgl-%s'
         content_type_list_by_group: 'ctlbg-%s'
         image_variation: 'ig'
